Update scrutinizer config

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,4 +3,7 @@ imports:
 
 tools:
     external_code_coverage:
-        timeout: 300
+
+vendor/bin/phpunit --coverage-clover=coverage.clover
+wget https://scrutinizer-ci.com/ocular.phar
+php ocular.phar code-coverage:upload --format=php-clover coverage.clover
