--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,6 +4,6 @@ imports:
 tools:
     external_code_coverage:
 
-vendor/bin/phpunit --coverage-clover=coverage.clover
+phpunit --coverage-clover=coverage.clover
 wget https://scrutinizer-ci.com/ocular.phar
 php ocular.phar code-coverage:upload --format=php-clover coverage.clover
