Update scrutinizer config

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,8 +2,4 @@ imports:
     - php
 
 tools:
-    external_code_coverage:
-
-phpunit --coverage-clover=coverage.clover
-wget https://scrutinizer-ci.com/ocular.phar
-php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    external_code_coverage: true
